// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default 1`] = `
<div
  className="outline"
>
  <div
    className="center-align"
  >
    <button
      className="efile-btn btn"
      onClick={[Function]}
      type="button"
    >
      button label
    </button>
  </div>
</div>
`;

exports[`Storyshots Button Mobile 1`] = `
<div
  className="outline"
>
  <div
    className="center-align"
  >
    <button
      className="efile-btn btn"
      onClick={[Function]}
      type="button"
    >
      button label
    </button>
  </div>
</div>
`;

exports[`Storyshots Home Default 1`] = `
<div>
  <p>
    eFiling Demo Client
  </p>
  <div
    className="outline"
  >
    <div
      className="center-align"
    >
      <button
        className="efile-btn btn"
        onClick={[Function]}
        type="button"
      >
        With CSO Account
      </button>
    </div>
  </div>
  <br />
  <div
    className="outline"
  >
    <div
      className="center-align"
    >
      <button
        className="efile-btn btn"
        onClick={[Function]}
        type="button"
      >
        Without CSO Account
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Home Mobile 1`] = `
<div>
  <p>
    eFiling Demo Client
  </p>
  <div
    className="outline"
  >
    <div
      className="center-align"
    >
      <button
        className="efile-btn btn"
        onClick={[Function]}
        type="button"
      >
        With CSO Account
      </button>
    </div>
  </div>
  <br />
  <div
    className="outline"
  >
    <div
      className="center-align"
    >
      <button
        className="efile-btn btn"
        onClick={[Function]}
        type="button"
      >
        Without CSO Account
      </button>
    </div>
  </div>
</div>
`;
